Stylesheet/emote/tag updates 2013-03-04

--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -476,3 +476,27 @@ a[href|="/geneticallymodifiedsalamanderwithafacejustlikegeorgeclooney"] {
     width: 150px;
     height: 148px;
     background-image: url(%%Salamander%%) }
+
+a[href|="/pantschwitz"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 98px;
+    height: 150px;
+    background-image: url(%%pantschwitz%%) }
+
+a[href|="/niggerdicksinfluttershysanus"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 98px;
+    height: 150px;
+    background-image: url(%%qVT5qQv%%) }
+
+a[href|="/rdjam"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 142px;
+    height: 124px;
+    background-image: url(%%20percentcooler%%) }
