--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -619,7 +619,15 @@ width: 150px;
 height: 125px;
 background-image: url(%%itsreal%%) !important
 }
-a[href|="/pfudon"], a[href|="/pinkfluffyunicornsdancingonrainbows"], a[href|="/pinkfluffyunicorndancingonrainbows"]{
+a[href|="/calmdowntwilight"]{
+display:block;
+clear: none;
+float: left;
+width: 150px;
+height: 128px;
+background-image: url(%%calmdowntwilight%%) !important
+}
+a[href|="/pfudon"], a[href|="/pfudor"], a[href|="/pinkfluffyunicornsdancingonrainbows"], a[href|="/pinkfluffyunicorndancingonrainbows"]{
 display:block;
 clear: none;
 float: left;
