--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -206,7 +206,7 @@ display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em1-v6%%);
+background-image: url(%%foe-em1-v8%%);
 }
 
 
@@ -219,7 +219,7 @@ a[href|="/bjclassy"]{ background-position: 0 -120px; width: 70px; height: 70px; 
 a[href|="/p21"]{ background-position: -202px -256px; width: 70px; height: 70px; }
 a[href|="/glory"]{ background-position: 0 -750px; width: 70px; height: 70px; }
 a[href|="/rampage"]{ background-position: -202px -646px; width: 70px; height: 70px; }
-a[href|="/bjscared"]{ background-position: 0 -240px; width: 70px; height: 70px; }
+a[href|="/bjscared"]{ background-position: 0 -240px; width: 57px; height: 70px; }
 a[href|="/p21notamused"], a[href|="/p21fun"]{ background-position: -202px -376px; width: 70px; height: 70px;}
 a[href|="/anteup"]{background-position: 0 0; width: 70px; height: 70px; }
 a[href|="/charity"]{ background-position: 0 -630px; width: 70px; height: 70px; }
@@ -367,25 +367,27 @@ a[href|="/plotseverywhere"]{ background-position: 0 -1937px; width: 180px; heigh
 a[href|="/psychoshy"]{ background-position: -250px 0; width: 98px; height: 150px;}
 a[href|="/psychoshy"]:hover{background-position: -250px -200px; width: 98px; height: 150px;}
 
-a[href|="/lpmintals"], a[href|="/redeye"], a[href|="/vrcrazy"], a[href|="/mglory"], a[href|="/hiredgun"], a[href|="/bjwindow"], a[href|="/calamityspooky"], a[href|="/murkyinsecure"], a[href|="/bjinabowl"], a[href|="/tapdancingbj"], a[href|="/bjbored"]
+a[href|="/lpmintals"], a[href|="/redeye"], a[href|="/vrcrazy"], a[href|="/mglory"], a[href|="/hiredgun"], a[href|="/bjwindow"], a[href|="/calamityspooky"], a[href|="/murkyinsecure"], a[href|="/bjinabowl"], a[href|="/tapdancingbj"], a[href|="/bjbored"], a[href|="/lpgdi"], a[href|="/bjmanic"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em5-v18%%);
+background-image: url(%%foe-em5-v20%%);
 }
 a[href|="/bjbored"]{background-position: 0 0; width: 70px; height: 70px; }
-a[href|="/bjinabowl"]{ background-position: 0 -120px; width: 73px; height: 70px; }
-a[href|="/bjwindow"]{  background-position: 0 -240px; width: 96px; height: 100px;}
-a[href|="/calamityspooky"]{ background-position: 0 -390px; width: 129px; height: 100px; }
-a[href|="/hiredgun"]{ background-position: 0 -540px; width: 117px; height: 150px; }
-a[href|="/lpmintals"]{background-position: 0 -740px; width: 71px; height: 100px; } 
-a[href|="/mglory"]{ background-position: 0 -890px; width: 154px; height: 150px; }
-a[href|="/murkyinsecure"]{ background-position: 0 -1090px; width: 81px; height: 100px; }
-a[href|="/redeye"]{ background-position: 0 -1240px; width: 64px; height: 100px; }
-a[href|="/tapdancingbj"]{ background-position: 0 -1390px; width: 127px; height: 150px; }
-a[href|="/vrcrazy"]{ background-position: 0 -1590px; width: 70px; height: 70px; } 
+a[href|="/bjmanic"]{background-position: 0 -120px; width: 70px; height: 72px; }
+a[href|="/bjinabowl"]{  background-position: 0 -242px; width: 73px; height: 70px; }
+a[href|="/bjwindow"]{ background-position: 0 -362px; width: 96px; height: 100px;}
+a[href|="/calamityspooky"]{ background-position: 0 -512px; width: 129px; height: 100px; }
+a[href|="/hiredgun"]{ background-position: 0 -662px; width: 117px; height: 150px; }
+a[href|="/lpgdi"]{ background-position: 0 -862px; width: 70px; height: 83px; }
+a[href|="/lpmintals"]{background-position: 0 -995px; width: 71px; height: 100px; } 
+a[href|="/mglory"]{ background-position: 0 -1145px; width: 154px; height: 150px; }
+a[href|="/murkyinsecure"]{ background-position: 0 -1345px; width: 81px; height: 100px; }
+a[href|="/redeye"]{  background-position: 0 -1495px; width: 64px; height: 100px; }
+a[href|="/tapdancingbj"]{ background-position: 0 -1645px; width: 127px; height: 150px; }
+a[href|="/vrcrazy"]{ background-position: 0 -1845px; width: 70px; height: 70px; } 
 
 
 a[href|="/advicebj"]
@@ -464,10 +466,10 @@ a[href|="/rampagesmash"]
 display: block;
 clear: none;
 float: left;
-width: 200px;
-height: 221px;
+width: 188px;
+height: 201px;
 background-repeat: no-repeat;
-background-image: url(%%rsmash-v3%%);
+background-image: url(%%rsmash-v4%%);
 }
 a[href|='/rampagesmash'] {background-position: 0px 0px}
 
@@ -489,9 +491,9 @@ display: block;
 clear: none;
 float: left;
 width: 150px;
-height: 125px;
+height: 122px;
 background-repeat: no-repeat;
-background-image: url(%%pinkiesprite%%);
+background-image: url(%%pinke-v2%%);
 }
 a[href|='/pinke'] {background-position: 0px 0px}
 
