--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -192,7 +192,7 @@ a[href|="/flutterheart"]  {
     background-position: -1011px -0px 
     }
 /* HOLY SHEET MORE EMOTES */
-a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"] {
+a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"] {
 
     display: block;
     clear: none;
@@ -207,6 +207,10 @@ a[href|="/loveyou"], a[href|="/fluttershylovesyou"] {
 a[href|="/fluttertine"], a[href|="/shytine"] {
     width: 135px;
     background-position: -171px -0px 
+    }
+a[href|="/rarityshynibble"], a[href|="/earnibble"] {
+    width: 220px;
+    background-position: -306px -0px 
     }
 /* SNUGGLES */
 a[href|="/shydashiesnuggle"], a[href|="/shydashsnuggle"], a[href|="/flutterdashsnuggle"], a[href|="/shyhuggle"], a[href|="/flutterhuggle"] {
