--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -112,6 +112,30 @@ a[href|="/rdhelp"]{
     height: 140px;
     background-image: url(%%rdhelp%%)
     }
+a[href|="/ppclock"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 92px;
+    height: 140px;
+    background-image: url(%%ppclock%%)
+    }
+a[href|="/fsjam"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 268px;
+    height: 140px;
+    background-image: url(%%fsjam%%)
+    }
+a[href|="/rdpdance"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 140px;
+    background-image: url(%%rdpdance%%)
+    }
 /*end animotes*/
 
 /* sheet1 */
@@ -222,8 +246,13 @@ a[href|="/btcpatch"],
 a[href|="/fluttershywut"],
 a[href|="/bluesbrothersandtom"], 
 a[href|="/btcassemble"], 
-a[href|="/spaceunicorndeliveringthemailallaroundtheworld"], 
-a[href|="/neonpegasus"]
+a[href|="/spaceunicorndeliveringtherainbowsallaroundtheworld"], 
+a[href|="/neonpegasus"],
+a[href|="/ppmath"],
+a[href|="/derpworst"],
+a[href|="/discordsalute"],
+a[href|="/badassocty"],
+a[href|="/shutupmarm"]
 {
     display: block;
     clear: none;
@@ -263,7 +292,7 @@ a[href|="/btcassemble"]{
     width: 214px;
     background-position: -0px -560px;
 }
-a[href|="/spaceunicorndeliveringthemailallaroundtheworld"]{
+a[href|="/spaceunicorndeliveringtherainbowsallaroundtheworld"]{
     width: 210px;
     background-position: -0px -700px;
 }
@@ -271,6 +300,29 @@ a[href|="/neonpegasus"]{
     width: 280px;
     height: 280px;
     background-position: -0px -840px;
+}
+a[href|="/ppmath"]{
+    width: 174px;
+    background-position: -0px -1120px;
+}
+a[href|="/derpworst"]{
+    width: 128px;
+    background-position: -0px -1260px;
+}
+a[href|="/discordsalute"]
+{
+    width: 129px;
+    background-position: -129px -1260px;
+}
+a[href|="/badassocty"]
+{
+    width: 187px;
+    background-position: -0px -1400px;
+}
+a[href|="/shutupmarm"]
+{
+    width: 93px;
+    background-position: -187px -1400px;
 }
 
 /* end sheet 2 */
@@ -362,3 +414,129 @@ a[href|="/princessysehro"]{
 }
 
 /* end sheet 3 */
+
+
+/* sheet4 */
+a[href|="/bpnope"], 
+a[href|="/drinkallthebooze"], 
+a[href|="/meboozsta"], 
+a[href|="/notouch"],
+a[href|="/bpguzzle"],
+a[href|="/problemliver"], 
+a[href|="/bplikespunch"], 
+a[href|="/bpdrunkwat"], 
+a[href|="/bptini"], 
+a[href|="/bpdrurp"],
+a[href|="/fuckthattimetodrink"], 
+a[href|="/fkuctaht"], 
+a[href|="/bphic"], 
+a[href|="/bpidgaf"], 
+a[href|="/bphugs"], 
+a[href|="/bppassedout"]
+ {
+    display: block;
+    clear: none;
+    float: left;
+    height: 140px;
+    background-image: url(%%sheet4%%)
+}
+
+a[href|="/bpnope"]{
+    width: 225px;
+}
+a[href|="/drinkallthebooze"]{
+    width: 174px;
+    background-position: -225px -0px;
+}
+a[href|="/meboozsta"]{
+    width: 147px;
+    background-position: -0px -140px;
+}
+a[href|="/notouch"]{
+    width: 138px;
+    background-position: -147px -140px;
+}
+a[href|="/bpguzzle"]{
+    width: 119px;
+    background-position: -285px -140px;
+}
+a[href|="/problemliver"]{
+    width: 325px;
+    background-position: -0px -280px;
+}
+a[href|="/bplikespunch"]{
+    width: 161px;
+    background-position: -0px -420px;
+}
+a[href|="/bpdrunkwat"]{
+    width: 117px;
+    background-position: -161px -420px;
+}
+a[href|="/bptini"]{
+    width: 92px;
+    background-position: -285px -420px;
+}
+a[href|="/bpdrurp"]{
+    width: 140px;
+    background-position: -0px -560px;
+}
+a[href|="/fuckthattimetodrink"]{
+    width: 143px;
+    background-position: -140px -560px;
+}
+a[href|="/fkuctaht"]{
+    width: 129px;
+    background-position: -285px -560px;
+}
+a[href|="/bphic"]{
+    width: 135px;
+    background-position: -0px -700px;
+}
+a[href|="/bpidgaf"]{
+    width: 148px;
+    background-position: -135px -700px;
+}
+a[href|="/bphugs"]{
+    width: 140px;
+    background-position: -0px -840px;
+}
+a[href|="/bppassedout"]{
+    width: 126px;
+    background-position: -140px -840px;
+}
+
+/* end sheet4 */
+
+
+/* sheet5 */
+a[href|="/aphxtwn"], 
+a[href|="/bplio"], 
+a[href|="/danvs"], 
+a[href|="/DAAAN"]
+ {
+    display: block;
+    clear: none;
+    float: left;
+    height: 140px;
+    background-image: url(%%sheet5%%)
+}
+
+a[href|="/aphxtwn"]{
+    width: 198px;
+}
+a[href|="/bplio"]{
+    width: 119px;
+    background-position: -198px -0px;
+}
+a[href|="/danvs"]{
+    width: 130px;
+    height: 200px;
+    background-position: -0px -1120px;
+}
+a[href|="/DAAAN"]{
+    width: 130px;
+    height: 200px;
+    background-position: -130px -1120px;
+}
+
+/* end sheet5 */
