--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -164,12 +164,12 @@ a[href="/spoiler"]:hover{color:white!important}/* Spoiler Setter*/
 div.over18 .entry .buttons .first{padding-left: 0px}
 .footer-parent
 {
- height:1100px;
+ height:850px;
  padding-bottom:0px;
  clear:both;
  text-align:center;
  width:100%;
- background-image:url(%%sbstare-fallout%%);
+ background-image:url(%%sbstare-neapolitan%%);
  background-repeat:no-repeat;
  margin-bottom:-30px;
  background-position: 50% 100%;
