--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -2,12 +2,12 @@
 
 /* Changes background  */
 body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%bubble%%)  no-repeat  fixed 60% 95% !important;
+    background:  url(%%ableist%%)  no-repeat  fixed 60% 95% !important;
 }
 
 /* Banner image and associated height values */
 #header-bottom-left:nth-of-type(n) {
-   background: url(%%fuckyoucheese2%%);
+   background: url(%%meatbannerpony%%);
    background-repeat: no-repeat;
    background-position: 50% 100%;
    height: 237px; /* 237 for meat's nice banner */
@@ -1041,85 +1041,85 @@ visibility:visible!important;
 }
 
 /* Replacing somebody's name? Put the replacement here. */
-a.author:before{
+/*a.author:before{
     content:"Princess "
-    }
-a.author[href$="V17Ds"]:before {content:"Princess SwiftV17Ds"}
-a.author[href$="Rudicorn"]:before {content:"Princess Grumpledick"}
-a.author[href$="jimmpony"]:before {content:"Princess sirtophat"}
-a.author[href$="DiscordDraconequus"]:before {content:"Princess therealChrysalis"}
-a.author[href$="IncidentalUnicorn2"]:before {content:"Princess theclinger"}
-a.author[href$="Juz16"]:before {content:"Princess Jizz"}
-a.author[href$="EvanMacIan"]:before {content:"Princess Ewan McGregor"}
-a.author[href$="kcirvam"]:before {content:"Princess mavrick45"}
-a.author[href$="Typhron"]:before {content:"Princess Tiffany"}
-a.author[href$="Unsinkablesam"]:before {content:"Princess The Go-Go Train"}
-a.author[href$="Sponce"]:before {content:"Princess Space"}
-a.author[href$="mrjoker7854"]:before {content:"Princess Pinkie Scratchtacularin"}
-a.author[href$="Conky_"]:before {content:"Princess Conky"}
-a.author[href$="PartOfAShoe"]:before {content:"Princess Welt"}
-a.author[href$="shawa666"]:before {content:"Princess Slowpoke666"}
-a.author[href$="Avebone"]:before {content:"Princess Ambassador of Foodmanes"}
-a.author[href$="Qwerty439"]:before {content:"Princess Asdfgh439"}
-a.author[href$="HtotheGRIFF"]:before {content:"Princess Mad Gay"}
-a.author[href$="viper9172"]:before {content:"Princess Sidelong"}
-a.author[href$="Lazeraze"]:before {content:"Princess Snowlily"}
-a.author[href$="31eipekili"]:before {content:"Princess   :I The whispering Jew "}
-a.author[href$="derram_2"]:before {content:"Princess derramina Diane Pie"}
-a.author[href$="Chiv_Cortland"]:before {content:"Princess Chivvypoop"}
-a.author[href$="442B8AEF9"]:before {content:"Princess Socialery"}
-a.author[href$="anonpon3"]:before {content:"Princess Artful" }
-a.author[href$="Ryskillz101"]:before {content:"Princess Ryrity"}
-a.author[href$="Phei"]:before {content:"Princess Pheilight Sparkle"}
-a.author[href$="socially_broken"]:before {content:"Princess 3p"}
-a.author[href$="MisanthropicCat"]:before {content:"Princess MisanthropicPone" }
-a.author[href$="Princess_Molestia_"]:before {content:"Princess Princess Molestia" }
-a.author[href$="Articulate_Angel"]:before {content:"Princess ɑrtɪkjələtˈeɪnʤəl (se hara hit bringeþ þára friþhengesta pintelum)" }
-a.author[href$="08G8V8"]:before {content:"Princess Vroom-Vroom ''Defeater 'Feet''' Trips" }
-a.author[href$=ArtfulPon]:before {content:"Princess WildPlastic" }
-a.author[href$=Avngr75]:before {content:"Princess Ted" }
-a.author[href$=tyl3rdurden]:before /*{ content:"Princess Tyler Derpden" }*/ {content:"Princess Belgium" }
-a.author[href$=raritie]:before { content:"Princess Rarity" }
-a.author[href$=Greenie_Lye]:before { content:"Princess Greenie_Lye (Green Derram)" } 
-a.author[href$=Chinch335]:before,a.author[href$=IllusionOf_Integrity]:before { content:"Princess Chillusion" }
-a.author[href$=trypsonite]:before { content:"Princess Who"; color:blue }
-a.author[href$=RetardVomitPussyCunt]:before { content:"Princess RainbowViolinPancakesCider" }
-a.author[href$=andysonic2]:before {content:"Princess anHURRsonic1"}
-a.author[href$="10z20Luka"]:before { content:"Princess Titty-slickers, God of Thunder and Lord of the Dance" }
-a.author[href$=PinkiePie2012]:before { content:"Princess Empress Pie" }
-a.author[href$=DarkSideOfTheSun]:before { content:"Princess DickSideOfTheSun" }
-a.author[href$=SkiidrowDash]:before { content:"Princess Ski iDrow Toity" }
-a.author[href$=Backupusername]:before { content:"Princess Cocksucker Shittytits" }
-a.author[href$=Speedingturtle]:before { content:"Princess Ambidextrous Tortoise" }
-a.author[href$=supercrunchy]:before { content:"Princess Crumcju" }
-a.author[href$=Taiokoshinketsu]:before { content:"Princess Tia" }
-a.author[href$=SolarLuna96]:before { content:"Princess Fluttershy's Wrath" }
-a.author[href$=Generic_Builder]:before { content:"Princess Genewic Bwuilda" }
-a.author[href$=volcano_bakemeats]:before { content:"Princess Madam Le Bake" }
-a.author[href$=DaylightDarkle]:before { content:"Princess Twilight Sparkle" }
-a.author[href$=Chillusion]:before { content:"Princess Cchhiilllluussiioonn" }
-a.author[href$=Esplin]:before {content:"Princess Ence Arsplin"}
-a.author[href$=Jeroknite]:before {content:"Princess JokerTine"; font-size:15px !important}
-a.author[href$=DarqWolff]:before { content:"Princess [](/DarqWolff)" }
-a.author[href$=cheesemoo]:before { content:"Princess Cheesemeow" }
-a.author[href$=scriptea]:before { content:"Princess scriptease" }
-a.author[href$=QdwachMD]:before { content:"Princess Queen QdwacgMD II " }
-a.author[href$=SirCinnamon]:before { content:"Princess KingCinnamon" }
-a.author[href$=BlockJuice_4]:before { content:"Princess [deleted]"; color: rgb(136, 136, 136) !important; cursor: text !important }
-a.author[href$=Boibi]:before { content:"Princess Dr. Boibi, M.D." }
-a.author[href$=nekoningen]:before { content:"Princess Scatman" }
-a.author[href$=slippy0]:before { content:"Princess emily" }
-a.author[href$=XelNaga]:before { content:"Princess Twi`Naga" }
-a.author[href$=Catharsis25]:before { content:"Princess Catharsis" }
-a.author[href$=tehz]:before,a.author[href$=tailcalled]:before { content:"Princess Tail Call" }
-a.author[href$=Ruuch]:before { content:"Princess Escort Sluthooves" }
-a.author[href$=herabek]:before {content:"Princess 420 BLAZE IT FGT"}
-a.author[href$=OneOfTheseDaysLuna]:before { content:"Princess OneOfTheseFutemotes" }
+    }*/
+a.author[href$="V17Ds"]:before {content:"SwiftV17Ds"}
+a.author[href$="Rudicorn"]:before {content:"Grumpledick"}
+a.author[href$="jimmpony"]:before {content:"sirtophat"}
+a.author[href$="DiscordDraconequus"]:before {content:"therealChrysalis"}
+a.author[href$="IncidentalUnicorn2"]:before {content:"theclinger"}
+a.author[href$="Juz16"]:before {content:"Jizz"}
+a.author[href$="EvanMacIan"]:before {content:"Ewan McGregor"}
+a.author[href$="kcirvam"]:before {content:"mavrick45"}
+a.author[href$="Typhron"]:before {content:"Tiffany"}
+a.author[href$="Unsinkablesam"]:before {content:"The Go-Go Train"}
+a.author[href$="Sponce"]:before {content:"Space"}
+a.author[href$="mrjoker7854"]:before {content:"Pinkie Scratchtacularin"}
+a.author[href$="Conky_"]:before {content:"Conky"}
+a.author[href$="PartOfAShoe"]:before {content:"Welt"}
+a.author[href$="shawa666"]:before {content:"Slowpoke666"}
+a.author[href$="Avebone"]:before {content:"Ambassador of Foodmanes"}
+a.author[href$="Qwerty439"]:before {content:"Asdfgh439"}
+a.author[href$="HtotheGRIFF"]:before {content:"Mad Gay"}
+a.author[href$="viper9172"]:before {content:"Sidelong"}
+a.author[href$="Lazeraze"]:before {content:"Snowlily"}
+a.author[href$="31eipekili"]:before {content:"  :I The whispering Jew "}
+a.author[href$="derram_2"]:before {content:"derramina Diane Pie"}
+a.author[href$="Chiv_Cortland"]:before {content:"Chivvypoop"}
+a.author[href$="442B8AEF9"]:before {content:"Socialery"}
+a.author[href$="anonpon3"]:before {content:"Artful" }
+a.author[href$="Ryskillz101"]:before {content:"Ryrity"}
+a.author[href$="Phei"]:before {content:"Pheilight Sparkle"}
+a.author[href$="socially_broken"]:before {content:"3p"}
+a.author[href$="MisanthropicCat"]:before {content:"MisanthropicPone" }
+a.author[href$="Princess_Molestia_"]:before {content:"Molestia" }
+a.author[href$="Articulate_Angel"]:before {content:"?rt?kj?l?t'e?n??l (se hara hit bringeþ þára friþhengesta pintelum)" }
+a.author[href$="08G8V8"]:before {content:"Vroom-Vroom ''Defeater 'Feet''' Trips" }
+a.author[href$=ArtfulPon]:before {content:"WildPlastic" }
+a.author[href$=Avngr75]:before {content:"Ted" }
+a.author[href$=tyl3rdurden]:before /*{ content:"Tyler Derpden" }*/ {content:"Belgium" }
+a.author[href$=raritie]:before { content:"Rarity" }
+a.author[href$=Greenie_Lye]:before { content:"Greenie_Lye (Green Derram)" } 
+a.author[href$=Chinch335]:before,a.author[href$=IllusionOf_Integrity]:before { content:"Chillusion" }
+a.author[href$=trypsonite]:before { content:"Who"; color:blue }
+a.author[href$=RetardVomitPussyCunt]:before { content:"RainbowViolinPancakesCider" }
+a.author[href$=andysonic2]:before {content:"anHURRsonic1"}
+a.author[href$="10z20Luka"]:before { content:"Titty-slickers, God of Thunder and Lord of the Dance" }
+a.author[href$=PinkiePie2012]:before { content:"Empress Pie" }
+a.author[href$=DarkSideOfTheSun]:before { content:"DickSideOfTheSun" }
+a.author[href$=SkiidrowDash]:before { content:"Ski iDrow Toity" }
+a.author[href$=Backupusername]:before { content:"Cocksucker Shittytits" }
+a.author[href$=Speedingturtle]:before { content:"Ambidextrous Tortoise" }
+a.author[href$=supercrunchy]:before { content:"Crumcju" }
+a.author[href$=Taiokoshinketsu]:before { content:"Tia" }
+a.author[href$=SolarLuna96]:before { content:"Fluttershy's Wrath" }
+a.author[href$=Generic_Builder]:before { content:"Genewic Bwuilda" }
+a.author[href$=volcano_bakemeats]:before { content:"Madam Le Bake" }
+a.author[href$=DaylightDarkle]:before { content:"Twilight Sparkle" }
+a.author[href$=Chillusion]:before { content:"Cchhiilllluussiioonn" }
+a.author[href$=Esplin]:before {content:"Ence Arsplin"}
+a.author[href$=Jeroknite]:before {content:"JokerTine"; font-size:15px !important}
+a.author[href$=DarqWolff]:before { content:"[](/DarqWolff)" }
+a.author[href$=cheesemoo]:before { content:"Cheesemeow" }
+a.author[href$=scriptea]:before { content:"scriptease" }
+a.author[href$=QdwachMD]:before { content:"Queen QdwacgMD II " }
+a.author[href$=SirCinnamon]:before { content:"KingCinnamon" }
+a.author[href$=BlockJuice_4]:before { content:"[deleted]"; color: rgb(136, 136, 136) !important; cursor: text !important }
+a.author[href$=Boibi]:before { content:"Dr. Boibi, M.D." }
+a.author[href$=nekoningen]:before { content:"Scatman" }
+a.author[href$=slippy0]:before { content:"emily" }
+a.author[href$=XelNaga]:before { content:"Twi`Naga" }
+a.author[href$=Catharsis25]:before { content:"Catharsis" }
+a.author[href$=tehz]:before,a.author[href$=tailcalled]:before { content:"Tail Call" }
+a.author[href$=Ruuch]:before { content:"Escort Sluthooves" }
+a.author[href$=herabek]:before {content:"420 BLAZE IT FGT"}
+a.author[href$=OneOfTheseDaysLuna]:before { content:"OneOfTheseFutemotes" }
 a.author[href$=Zovistograt]:before { content:'[](/ww20 “Needy Bitch”)' }
-a.author[href$=ZZW30]:before { content:"Princess CaptChuckles" }
-a.author[href$=JustAnotherGDB]:before { content:"Princess Just Another Face in the Clouds" }
-a.author[href$=Swiftskii]:before { content:"Princess FairyFacedWizardFelcher" }
-a.author[href$=Lord_Ninka]:before { content:"Princess Ninka" }
+a.author[href$=ZZW30]:before { content:"CaptChuckles" }
+a.author[href$=JustAnotherGDB]:before { content:"Just Another Face in the Clouds" }
+a.author[href$=Swiftskii]:before { content:"FairyFacedWizardFelcher" }
+a.author[href$=Lord_Ninka]:before { content:"Ninka" }
 
 
 /* Replacing puppy's name with a picture of derpy */
@@ -1339,10 +1339,12 @@ a[href|="/luna!"]:nth-of-type(n) { font-size: 18px; font-variant: small-caps !im
 .usertext-body h4 { font-size: 20px; font-weight: bold; color: navy; background: lightblue; text-align: center; padding: 3px; border-radius: 19px; -moz-border-radius: 19px; box-shadow: 2px 2px 5px #9999ff; text-shadow: 1px 1px #ffffff }
 
 
-body.res a.author[href$="Pathogen-David"], body.res a.author[href$="Phei"], body.res a.author[href$="myrandall"] { font-weight: bold; color: white !important; padding: 0 2px; border-radius: 3px }
+body.res a.author[href$="Pathogen-David"], body.res a.author[href$="Phei"], body.res a.author[href$="myrandall"], body.res a.author[href$="RAINBOW_PONY_SEMEN"] { font-weight: bold; color: white !important; padding: 0 2px; border-radius: 3px }
 body.res a.author[href$="Phei"] { background-color: #D4A4E8 }
 body.res a.author[href$="Pathogen-David"] { background-color: #662D8A }
 body.res a.author[href$="Myrandall"] {color:#FF69B4!important}
+body.res a.author[href$="RAINBOW_PONY_SEMEN"] {color:#ff00f7!important}
+
 /* PROPER GREENTEXT (stolen from plounge, which stole from /r/4chan) */
 .content .md h1 { color: #789922; border-bottom: none!important; padding-bottom: 0px }
 .content .md h1:before { content: ">" }
