--- a/source-css/mylittletwist.css
+++ b/source-css/mylittletwist.css
@@ -832,7 +832,17 @@ a[href|="/squid"]
 
 }
 
+a[href|="/twisterface"]
+{
 
+ background-image: url(%%ptwist%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 111px;
+    width: 100px;
+
+}
 
 /***********************
 *
