--- a/source-css/applejack.css
+++ b/source-css/applejack.css
@@ -108,7 +108,7 @@ background-position: 0 -10px;
 .side .subtitle, .flairtoggle {color:black;}
 body {
 background-color: #E3C19C !important;
-    background: url(%%applejac%%) no-repeat fixed center center
+    background: url(%%scrunchy%%) no-repeat fixed center center
     }
 div.footer-parent:after {
     width: 960px;
