--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -375,7 +375,7 @@ a.author[href$="bryvood"] {
     letter-spacing: -20px
     }
 a.author[href$="bryvood"]:after {
-    content: "Approximately 78% Shaggy";
+    content: "Tactical Decision Summonah";
     /*font-family: "wingdings", cursive;*/
     font-size: 16px !important;
     visibility: visible !important;
