--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -365,3 +365,11 @@ a[href|="/rainbee"] {
 	width: 199px;
 	height: 76px;
 }
+
+a[href|="/twilightdansen"],a[href|="/twidansen"]{
+width:300px;
+height:300px;
+display: block;
+background-image: url(%%twilightdansen%%);
+float: left
+}
